--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "author": "kanekotic <alvarojosepl@gmail.com>",
   "license": "MIT",
   "bin": {
-    "raw-to-guid": "bin/raw-to-guid.js"
+    "convert-guid": "bin/raw-to-guid.js"
   },
   "keywords": [
     "command line",
