added coverage tools

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "scripts": {
     "test": "jest",
     "test:dev": "jest --watchAll",
-    "test:cov": "jest --coverage",
+    "test:cov": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "deploy:major": "yarn version --major",
     "deploy:minor": "yarn version --minor",
     "deploy:patch": "yarn version --patch",
@@ -37,6 +37,7 @@
   },
   "dependencies": {
     "buffer": "^5.1.0",
-    "commander": "2.15.1"
+    "commander": "2.15.1",
+    "coveralls": "^3.0.1"
   }
 }
