--- a/package.json
+++ b/package.json
@@ -33,11 +33,11 @@
     ]
   },
   "devDependencies": {
+    "coveralls": "3.0.1",
     "jest": "23.1.0"
   },
   "dependencies": {
     "buffer": "^5.1.0",
-    "commander": "2.15.1",
-    "coveralls": "^3.0.1"
+    "commander": "2.15.1"
   }
 }
