--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,10 @@
 language: node_js
 sudo: false
 node_js:
-- node
+  - node
 script:
-- if [ "${TRAVIS_BRANCH}" = "UPGRADE" ]; then; git checkout master && yarn upgrade:local && yarn deploy:patch; fi
-- yarn test:cov
+  - if [[ "${TRAVIS_BRANCH}" = "UPGRADE" ]]; then; git checkout master && yarn upgrade:local && yarn deploy:patch; fi
+  - yarn test:cov
 deploy:
   skip_cleanup: true
   provider: npm
