--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "test:dev": "jest --watchAll",
     "test:cov": "jest --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "push": "yarn test && git push",
-    "upgrade:local": "yarn upgrade --latest && git add . && git commit -m \"updated dependencies\"; yarn push",
+    "upgrade:local": "yarn upgrade --latest && git add . && git commit -m \"updated dependencies\"",
     "deploy:major": "yarn version --major",
     "deploy:minor": "yarn version --minor",
     "deploy:patch": "yarn version --patch",
-    "preversion": "yarn test",
-    "postversion": "git push && git push --tags"
+    "deploy:push": "git push && git push --tags",
+    "preversion": "yarn test"
   },
   "jest": {
     "automock": false,
