--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 sudo: false
-env:
-  - CONTINUOUS_INTEGRATION=false
 node_js:
   - node
+env:
+  - CI=false
 script:
   - if [[ "${TRAVIS_EVENT_TYPE}" = "cron" ]]; then sh ./upgrade.sh; fi
   - yarn test:cov
