--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,9 @@
-os: osx
 language: node_js
 sudo: false
 node_js:
   - node
 script:
-  - if [[ "${TRAVIS_EVENT_TYPE}" = "cron" ]]; then sh ./upgrade.sh; fi
+  - if [[ "${TRAVIS_EVENT_TYPE}" = "cron" ]]; then ./upgrade.sh; fi
   - yarn test:cov
 deploy:
   skip_cleanup: true
