--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 os: osx
 language: node_js
-sudo: false
 node_js:
   - node
 script:
-  - if [[ "${TRAVIS_EVENT_TYPE}" = "cron" ]]; then ./upgrade.sh; fi
   - yarn test:cov
+after_success:
+  - if [[ "${TRAVIS_EVENT_TYPE}" = "cron" ]]; then ./upgrade.sh; fi
 deploy:
   skip_cleanup: true
   provider: npm
